# Clafoutis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLANS.md  README.md  pyproject.toml  specs.md
.github/workflows/: ci.yml  deploy-hf-space.yml
app/backend/app/: main.py
app/backend/app/api/: dependencies.py  health.py  import_.py  items.py  manifest.py  open.py  router.py  search.py  sources.py
app/backend/app/config/: settings.py
app/backend/app/connectors/: base.py  manifest_by_url_connector.py  mock_connector.py  registry.py
app/backend/app/mcp/: __init__.py  server.py  tools.py
app/backend/app/models/: error_models.py  import_models.py  manifest_models.py  normalized_item.py  search_models.py  source_models.py
app/backend/app/services/: import_service.py  item_service.py  manifest_resolver.py  search_orchestrator.py  source_service.py
app/backend/app/utils/: error_sanitizer.py  errors.py  http_client.py  ids.py  middleware.py  ttl_cache.py  url_validation.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.json
app/frontend/src/: main.tsx
app/frontend/src/app/: providers.tsx  router.tsx
app/frontend/src/components/: ErrorBoundary.tsx
app/frontend/src/hooks/: useImportUrl.ts  useSearch.ts  useSources.ts
app/frontend/src/lib/: apiClient.ts
app/frontend/src/pages/: AboutPage.tsx  ImportPage.tsx  ReaderPage.tsx  SearchPage.tsx  SourcesPage.tsx
app/frontend/src/store/: readerStore.ts  searchStore.ts  uiStore.ts
app/frontend/src/types/: api.ts  filters.ts  mirador.d.ts  normalized.ts
app/tests/: conftest.py
app/tests/integration/api/: test_endpoints.py
app/tests/unit/backend/: test_bodleian_connector.py  test_capability_prober.py  test_error_sanitizer.py  (+39 more)
docs/: acceptance-checklist.md  architecture.md  mvp-scope.md  specs.md
scripts/: mcp_client_example.py  run_mcp.py  smoke_backend.py  start.sh
(+21 files in other folders)
