[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clafoutis"
version = "0.1.0"
description = "Backend socle for Clafoutis"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<1.0",
  "defusedxml>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
]
mcp = [
  "mcp>=1.0,<2.0",
]

[project.scripts]
clafoutis-mcp = "app.mcp.server:run_stdio"
clafoutis-mcp-http = "app.mcp.server:run_http"

[tool.pytest.ini_options]
pythonpath = [
  "app/backend",
]
testpaths = [
  "app/tests",
]

[tool.setuptools.packages.find]
where = ["app/backend"]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C90"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["app/backend/app"]
